// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`cripplingShot should reduce target dex and strip current dodge 1`] = `
"*Игрок 1* использовал _🎯 Выстрел в колено_
\\[ 📖25 ]
*Игрок 1* атаковал *Игрок 2* _Оружием_ и нанёс *7.2* урона
\\[ Игрок 2 💔 💥-7.2/0.8 📖58 ]
_🎯 Выстрел в колено_ *Игрок 1*: 📖0"
`;

exports[`cripplingShot should block dodge cast while crippled 1`] = `
"*Игрок 1* использовал _🎯 Выстрел в колено_
\\[ 📖25 ]
*Игрок 1* атаковал *Игрок 2* _Оружием_ и нанёс *7.2* урона
\\[ Игрок 2 💔 💥-7.2/0.8 📖58 ]
_🎯 Выстрел в колено_ *Игрок 1*: 📖0
*Игрок 2* пытался использовать _🐍 Увертка_ на *Игрок 2*, но у него не получилось
_🎯 Выстрел в колено_ *Игрок 1*: 📖0"
`;

exports[`cripplingShot should reapply dex reduction in next round via onCast 1`] = `
"*Игрок 1* использовал _🎯 Выстрел в колено_
\\[ 📖25 ]
*Игрок 1* атаковал *Игрок 2* _Оружием_ и нанёс *7.2* урона
\\[ Игрок 2 💔 💥-7.2/0.8 📖58 ]
_🎯 Выстрел в колено_ *Игрок 1*: 📖0"
`;
